2016-03-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Sort entries of database file

2016-02-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch to Perl 5 Compatible Regular Expressions, changes include:
	  - require PCRE library
	  - drop bundled GNU regexp library
	* src/commandconf.c: add warning if a group is redefined

2016-02-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add new 'database_add_metadata' option

2016-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add new 'report_quiet' option

2015-11-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use single Makefile.am
	* doc/aide.conf.5.in: minor fixes

2015-11-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c: minor code cleanup

2015-11-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Rewrote handling of ignored/forced attributes, changes include:
	  - new 'report_ignore_added_attrs' option
	  - new 'report_ignore_removed_attrs' option
	  - print human-readable info about ignored attributes in report
	  - code cleanup
	  - bug fixes

2015-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new 'report_ignore_e2fsattrs' option

2015-10-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c: fixed bug if rules are removed

2015-10-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: fixed total number of entries

2015-08-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: added support for new e2fsattrs flags

2015-05-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: adjusted report layout

2015-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Renamed 'configure.in' to 'configure.ac'

2013-05-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Print checksums of databases in verbose level 2 or higher (closes
	  feature request 1502032)
	* Added new 'database_attrs' option
	* configure.in: fixed compilation with selinux
	* src/conf_lex.l, src/db_lex.l: fixed definition of YYDEBUG
