@@ -1,6 +1,7 @@
 Version 0.16 (NOT_YET_RELEASED)
 	* Enabled summarize_changes by default
 	* Switch to PCRE library
+	* Add new '--limit' parameter
 	* Sort entries of database file
 	* Compare database entries just once
 	* Added new root_prefix option
